Unsupervised Learning added

--- a/_posts/2018-04-01-cda.md
+++ b/_posts/2018-04-01-cda.md
@@ -6,6 +6,7 @@ excerpt: "Python, Numpy, Pandas, Supervised Learning, Data Science, Machine Lear
 ---
 <!-- 
 # Computational Data Analysis -->
+Code for this project is available on [GitHub](https://github.com/jjgong7/Computational-Data-Analytics).  
 
 ## Description:
 Course includes hands-on introduction to programming techniques relevant to data analysis and machine learning. Most of the programming exercises are based on Python and SQL.
@@ -17,7 +18,7 @@ algebra and mathematical optimization.
 ## Notebooks:
 
 1. [Notebook 1: Python Essentials](https://github.com/jjgong7/Computational-Data-Analytics/tree/master/Notebook%201)
-2. [Notebook 2: Pariwise Association Mining](https://github.com/jjgong7/Computational-Data-Analytics/tree/master/Notebook%202)
+2. [Notebook 2: Pairwise Association Mining](https://github.com/jjgong7/Computational-Data-Analytics/tree/master/Notebook%202)
 3. Notebook 3: Math Review (Not present)
 4. [Notebook 4: Representing Numbers](https://github.com/jjgong7/Computational-Data-Analytics/tree/master/Notebook%204)
 5. [Notebook 5: Preprocessing Unstructured Text (Regex)](https://github.com/jjgong7/Computational-Data-Analytics/tree/master/Notebook%205)
