--- a/_posts/2018-06-02-bay.md
+++ b/_posts/2018-06-02-bay.md
@@ -7,3 +7,4 @@ header:
   image: "./images/ssc.png"
 ---
 
+Code for this project is available on [GitHub](https://github.com/jjgong7/Bayesian-Statistics).
