--- a/_posts/2018-06-03-sl.md
+++ b/_posts/2018-06-03-sl.md
@@ -6,8 +6,10 @@ excerpt: "Supervised Learning, Decision Trees, Boosting, Neural Networks, Suppor
 header:
   image: ""
 ---
+## Objective:  
 
-<!-- # Supervised Learning -->
+Details for this project are available on [GitHub](https://github.com/jjgong7/Machine-Learning/tree/master/1%20-%20Supervised%20Learning).
+
 Analyze two datasets using five different supervised learning algorithms. Weka, a suite of machine learning software written in Java, is used for analysis.
 
 ## Datasets used:
@@ -56,6 +58,8 @@ Identifying phishing websites can:
 ---
 
 ### 1. Decision Tree:
+<img src="../images/ml-sup/dt.jpg" alt="Decision Tree" width="500px">  
+
 This is a top down learning algorithm that splits the best attributes (decision nodes) based on information gain. The branches are the outcomes of the binary splits (≥,≤ or T, F) and the leaf nodes represent a classifying label.  
   
 Hyperparameters:  
@@ -65,31 +69,33 @@ Hyperparameters:
     - Lower values incur more pruning
     
 
-**Faulty Steel Plates**
+**Faulty Steel Plates: Decision Tree**
 #### Learning Curve  
-<img src="../images/ml-sup/DT_LC_FP.png" alt="DT_LC_FP" width="300px">  
+<img src="../images/ml-sup/DT_LC_FP.png" alt="DT_LC_FP" width="350px">  
 * High Variance/Low Bias (Overfitting)
 * Training accuracy ~93% while validation accuracy ~70%
 
 #### Model Complexity
-<img src="../images/ml-sup/DT_MC_FP.png" alt="DT_MC_FP" width="300px">  
+<img src="../images/ml-sup/DT_MC_FP.png" alt="DT_MC_FP" width="350px">  
 * Adjusted confidence factor from 0.1 to 0.5
-* With confidence factor = 0.5, tree size is 432, and has second highest cv-accuracy after the unpruned tree. 
+* With confidence factor = 0.2, tree size is 257 with 129 leaves, cv-accuracy is 73.32%. 
 
-**Phishing Websites**
+**Phishing Websites: Decision Tree**
 #### Learning Curve  
-<img src="../images/ml-sup/DT_LC_PW.png" alt="DT_LC_PW" width="300px">  
+<img src="../images/ml-sup/DT_LC_PW.png" alt="DT_LC_PW" width="350px">  
 * Low Variance/Low Bias (Good Model)
 * Accuracy is high for both training and validation set
 * Classifies well even with low training data (~10%) 
 
 #### Model Complexity  
-<img src="../images/ml-sup/DT_MC_PW.png" alt="DT_MC_PW" width="300px">  
-* With confidence factor = 0.2, tree size is 257 with 129 leaves, CV-accuracy is 73.32%. 
+<img src="../images/ml-sup/DT_MC_PW.png" alt="DT_MC_PW" width="350px">  
+* With confidence factor = 0.5, tree size is 432, and has second highest cv-accuracy after the unpruned tree. 
 
 Phishing websites has a much better classification accuracy than faulty plates. This can be because faulty plates dataset has seven different class labels, while phishing websites only has a binary label.
 
 ### 2. Boosting:  
+<img src="../images/ml-sup/bs.png" alt="Boosting" width="500px">  
+
 Boosting is an ensemble learning method that incrementally builds the model by placing more weight on the misclassified data. It basically turns a set of weak learners, which always do better than chance, into a single strong learner. In Weka, the boosting algorithm is called AdaBoostM1.  
 
 Hyperparameters:
@@ -101,25 +107,25 @@ Hyperparameters:
     - Higher iterations use more weak learners
     - 10 to 50
 
-**Faulty Steel Plates**
+**Faulty Steel Plates: Boosting**
 #### Learning Curve  
-<img src="../images/ml-sup/BS_LC_FP.png" alt="BS_LC_FP" width="300px">  
+<img src="../images/ml-sup/BS_LC_FP.png" alt="BS_LC_FP" width="350px">  
 * High Variance/Low Bias (Overfitting)
 * 100% accuracy on training set while validation set only has around 71% accuracy, so it doesn't generalize well
 
 #### Model Complexity
-<img src="../images/ml-sup/BS_MC_FP.png" alt="BS_MC_FP" width="300px">  
+<img src="../images/ml-sup/BS_MC_FP.png" alt="BS_MC_FP" width="350px">  
 * Test iterations from 10 to 50 to improve weak learners
 * Best cv-accuracy at 79.70% when iterations = 40. Tree size is 293 with 147 leaves.
 
-**Phishing Websites**
+**Phishing Websites: Boosting**
 #### Learning Curve  
-<img src="../images/ml-sup/BS_LC_PW.png" alt="BS_LC_PW" width="300px">  
+<img src="../images/ml-sup/BS_LC_PW.png" alt="BS_LC_PW" width="350px">  
 * Low Variance/Low Bias (Good model)
-* Training and validation data both above ~92%
+* Training and validation data are both above ~92%
 
 #### Model Complexity  
-<img src="../images/ml-sup/BS_MC_PW.png" alt="BS_MC_PW" width="300px">  
+<img src="../images/ml-sup/BS_MC_PW.png" alt="BS_MC_PW" width="350px">  
 * Test iterations from 10 to 50 to improve weak learners
 * Best cv-accuracy at 96.96% when iterations = 30. Tree size is lowest at 19.
 
@@ -130,6 +136,8 @@ For the learning curves, both datasets improve a lot with more training data:
 This shows with more training data, the model is able to generalize better and achieve a lower variance/bias. Boosting does better than the original decision tree because it improves upon our decision tree base classifier by turning weak learners into a set of strong learners.
 
 ### 3. Neural Network:  
+<img src="../images/ml-sup/nn.jpeg" alt="Neural Network" width="500px">  
+
 A neural network tries to mimic the brain in mapping inputs to outputs. Weka uses MultiLayerPerceptron - a network of perceptions. 
 
 Hyperparameters:
@@ -141,50 +149,72 @@ Hyperparameters:
     - Weights for the perceptrons are learned from the training set and updated via “backpropagation”.
     - The change in weight is the learning rate times the gradient plus the previous change in weight times the momentum.
 
-**Faulty Steel Plates**
+**Faulty Steel Plates: Neural Network**
 #### Learning Curve  
-<img src="../images/ml-sup/NN_LC_FP.png" alt="NN_LC_FP" width="300px">  
-What this means is
+<img src="../images/ml-sup/NN_LC_FP.png" alt="NN_LC_FP" width="350px">  
+* High Variance/Low Bias (Overfitting)
+* Variance decreases as more of the data is used for training since training and cv-accuracy slightly converge.
+* Bias increases slightly as the model performs worse on training set. 
 
 #### Model Complexity
-<img src="../images/ml-sup/NN_MC_FP.png" alt="NN_MC_FP" width="300px">  
-What this mean  
+<img src="../images/ml-sup/NN_MC_FP.png" alt="NN_MC_FP" width="350px">  
+* Altered amount of neurons for hidden layer, optimal was 16 neurons = [(attributes+classes)/2] neurons
+* As number of hidden layers increased, the cv-accuracy decreased
+* Altered learning rate (default=0.2) and momentum (default=0.3)
+    - Lower rates produced better results (smaller steps in calculating the weight change), but also longer training time.
+* Optimal: 1 hidden layer, 16 neurons, and learning rate and momentum of 0.1
+    - cv-accuracy of 72.87%
 
-**Phishing Websites**
+**Phishing Websites: Neural Network**
 #### Learning Curve  
-<img src="../images/ml-sup/NN_LC_PW.png" alt="NN_LC_PW" width="300px">  
-What this mean  
+<img src="../images/ml-sup/NN_LC_PW.png" alt="NN_LC_PW" width="350px">  
+* Low Variance/Low Bias (Good model)
+* Variance decreases with more training data 
 
 #### Model Complexity  
-<img src="../images/ml-sup/NN_MC_PW.png" alt="NN_MC_PW" width="300px">  
-What this mean
+<img src="../images/ml-sup/NN_MC_PW.png" alt="NN_MC_PW" width="350px">    
+* Altered amount of neurons for hidden layer, optimal was 16 neurons = [(attributes+classes)/2] neurons
+* As number of hidden layers increased, the cv-accuracy decreased
+* Altered learning rate (default=0.2) and momentum (default=0.3)
+    - Lower rates produced better results (smaller steps in calculating the weight change), but also longer training time.
+* Optimal: 1 hidden layer, 16 neurons, and learning rate and momentum of 0.1
+    - cv-accuracy of 96.69%  
 
 ### 4. Support Vector Machines (SVM):  
+<img src="../images/ml-sup/svm.png" alt="SVM" width="500px">  
+
 Support Vector Machines uses hyperplanes to maximize the margins between the different classes. The larger the distance between the hyperplanes, the better the generalization and separation of classes. In Weka, LibSVM is the most popular and robust SVM algorithm. LibSVM uses one vs one classification, where each different pair of labels has a separately trained classifier.  
 
 Hyperparameters:  
 * Kernels
     - Linear, Polynomial, Radial Basis Function, Sigmoid
 
-**Faulty Steel Plates**
+**Faulty Steel Plates: SVM**
 #### Learning Curve  
-<img src="../images/ml-sup/SVM_LC_FP.png" alt="SVM_LC_FP" width="300px">  
-What this means is
+<img src="../images/ml-sup/SVM_LC_FP.png" alt="SVM_LC_FP" width="350px">  
+* High Variance/Low Bias (Overfitting)
+* Training set has 100% accuracy, while the validation set only performs around 62% - the worst performing algorithm yet!
 
 #### Model Complexity
-<img src="../images/ml-sup/SVM_MC_FP.png" alt="SVM_MC_FP" width="300px">  
-What this mean  
+<img src="../images/ml-sup/SVM_MC_FP.png" alt="SVM_MC_FP" width="350px">  
+* Linear kernel performs best with a cv-accuracy of 69.91%
+* Poorest performing algorithm for faulty plates, most likely because the hyperplanes aren't able to separate the seven classes well. It performs better on binary classification. 
 
-**Phishing Websites**
+**Phishing Websites: SVM**
 #### Learning Curve  
-<img src="../images/ml-sup/SVM_LC_PW.png" alt="SVM_LC_PW" width="300px">  
-What this mean  
+<img src="../images/ml-sup/SVM_LC_PW.png" alt="SVM_LC_PW" width="350px">  
+* Low Variance/Low Bias
+* Training accuracy and cv-accuracy are almost identical
 
 #### Model Complexity  
-<img src="../images/ml-sup/SVM_MC_PW.png" alt="SVM_MC_PW" width="300px">  
-What this mean
+<img src="../images/ml-sup/SVM_MC_PW.png" alt="SVM_MC_PW" width="350px">  
+* Radial Basis Function kernel with default hyperparameters performs best with ~94% accuracy.
+  
+Based on the learning curves, both models generalize better as the training set increases. 
 
 ### 5. k-Nearest Neighbors (kNN):  
+<img src="../images/ml-sup/knn.png" alt="KNN" width="500px">  
+
 The k-Nearest Neighbor algorithm outputs a classification based on the majority of the number of neighbors. This is an instance based, lazy learner, which means it does nothing until you have to make a prediction. In Weka, IBK is used.  
 
 Hyperparameters:  
@@ -193,35 +223,39 @@ Hyperparameters:
 * Distance Function
     - Default: Euclidean Distance
 
-**Faulty Steel Plates**
+**Faulty Steel Plates: kNN**
 #### Learning Curve  
-<img src="../images/ml-sup/KNN_LC_FP.png" alt="KNN_LC_FP" width="300px">  
-What this means is
+<img src="../images/ml-sup/KNN_LC_FP.png" alt="KNN_LC_FP" width="350px">  
+* High Variance/Low Bias (Overfitting)
+* Training set shows 100% accuracy, while cv-accuracy is 71%
+* Model doesn't improve much with more training data
 
 #### Model Complexity
-<img src="../images/ml-sup/KNN_MC_FP.png" alt="KNN_MC_FP" width="300px">  
-What this mean  
+<img src="../images/ml-sup/KNN_MC_FP.png" alt="KNN_MC_FP" width="350px">  
+* Number of nearest neighbors adjusted from 1 to 20
+    - As number of neighbors increases, more bias is introduced because the cv-accuracy and training accuracy get worse.
+* Optimal number of neighbors is k=5, with 71.59% cv-accuracy
 
-**Phishing Websites**
+**Phishing Websites: kNN**
 #### Learning Curve  
-<img src="../images/ml-sup/KNN_LC_PW.png" alt="KNN_LC_PW" width="300px">  
-What this mean  
+<img src="../images/ml-sup/KNN_LC_PW.png" alt="KNN_LC_PW" width="350px">  
+* Low Variance/Low Bias
+* Model improves significantly with more training data, cv-accuracy improves by over 6% from 10% training data to 100%. Variance decreases.
 
 #### Model Complexity  
-<img src="../images/ml-sup/KNN_MC_PW.png" alt="KNN_MC_PW" width="300px">  
-What this mean
+<img src="../images/ml-sup/KNN_MC_PW.png" alt="KNN_MC_PW" width="350px">  
+* Number of nearest neighbors adjusted from 1 to 20
+    - As number of neighbors increases, more bias is introduced because the cv-accuracy and training accuracy get worse.
+* Optimal number of neighbors is k=1, with 97.04% cv-accuracy
 
+### Conclusion:  
+<img src="../images/ml-sup/Conclusion.png" alt="Summary" width="500px"> 
 
-<!-- ![e](../images/ml-sup/Conclusion.png)   -->
-
-<!-- #### Learning Curve
-**Faulty Steel Plates**
-**Phishing Websites**
-
-#### Model Complexity
-**Faulty Steel Plates**
-**Phishing Websites** -->
-
-
-
-
+* After hyperparameter tuning and selecting the best hyperparameters, test set is used to determine the final performance and quality of the models.
+* Accuracy and confusion matrix were used to determine the best models
+* Faulty Steel Plates Dataset:
+    - Boosting Algorithm with Decision Tree Base Classifier produces the best test accuracy at 77.12%. Decision Tree was second.
+* Phishing Websites Dataset:
+    - Decision Tree, Boosting, and Multilayer Perceptron all do well with an accuracy of ~96%
+    - KNN performs best on the test set with 97.06% accuracy
+    - KNN also a fast algorithm since it's a lazy learner that only tests for 5 nearest neighbors
