--- a/_posts/2018-06-01-dbm.md
+++ b/_posts/2018-06-01-dbm.md
@@ -7,7 +7,8 @@ header:
   image: "https://github.com/jjgong7/Database-Systems-Concepts-and-Design/raw/master/Phase%203/images/2.MainMenu.jpg"
 ---
 <!-- # Emergency Resource Management System (ERMS) -->
-## Database Systems - Team Project
+## Database Systems - Team Project  
+Code for this project is available on [GitHub](https://github.com/jjgong7/Database-Systems-Concepts-and-Design).
 
 **Team Members:**  
 Evan Althouse, Chang-Zhou Gong, Tich Mangono, David Ribeiro 
