--- a/_posts/2018-06-02-ul.md
+++ b/_posts/2018-06-02-ul.md
@@ -377,7 +377,7 @@ Good clusters at k=3, 6, and 10
 * Seems like accuracy is best for EM and k-means when k=6
 
 ## Conclusion:
-The dimensions for each of the components in the clustering algorithms in Part 2 were as follows:  
+The dimensions for each of the components in the clustering algorithms in Part 2 along with computational times were as follows:  
 
 <img src="../images/ml-unsup/Conclusion.png" alt="Conclusion" width="350px">  
 * Computational times were similar for PCA and ICA based on the dimensions
