--- a/_posts/2018-06-02-ul.md
+++ b/_posts/2018-06-02-ul.md
@@ -4,7 +4,7 @@ date: 2018-06-02
 tags: [unsupervised learning, python, jython]
 excerpt: "Unsupervised Learning, Dimensionality Reduction, Clustering, PCA, ICA"
 header:
-  image: ""
+  image: "./images/ml-unsup/unsup_header.png"
 ---
 ## Objective:  
 Details for this project are available on [GitHub](https://github.com/jjgong7/Machine-Learning/tree/master/3%20-%20Unsupervised%20Learning%20and%20Dimensionality%20Reduction).
