--- a/_posts/2018-06-03-sl.md
+++ b/_posts/2018-06-03-sl.md
@@ -4,7 +4,7 @@ date: 2018-06-03
 tags: [supervised learning, python]
 excerpt: "Supervised Learning, Decision Trees, Boosting, Neural Networks, Support Vector Machines, k-Nearest Neighbors"
 header:
-  image: ""
+  image: "./images/ml-sup/sup_header.png"
 ---
 ## Objective:  
 
