--- a/_posts/2019-05-01-nhanes.md
+++ b/_posts/2019-05-01-nhanes.md
@@ -2,13 +2,12 @@
 title: "Practicum - NHANES"
 date: 2019-05-01
 tags: [practicum, python, R, supervised learning]
-excerpt: "Supervised Learning, Python, R, XGBoost, Random Forest, Sci-kit Learn"
+excerpt: "Supervised Learning, R (ggplot2, survey), Python, XGBoost, Random Forest, Sci-kit Learn, Pandas"
 header:
   image: "./images/practicum/nhanes_header.png"
 ---
 ## Objective:  
-<!-- 
-Details for this project are available on [GitHub](https://github.com/jjgong7/Machine-Learning/tree/master/1%20-%20Supervised%20Learning). -->
+Details for this project are available on [GitHub](https://github.com/jjgong7/NHANES-Practicum).
 
 The objective of the practicum is to identify the prevalence and risk factors of hospital utilization and major diseases over time using publicly reported qualitative and quantitative data. To help answer this objective, I will explore five main questions:
 
@@ -27,7 +26,11 @@ This project is split into six parts:
 3. Part six:
     * Identify the prevalence of undiagnosed Diabetes, where BMI > 30.
 
-## Introduction to NHANES
+## Introduction to NHANES  
+“The National Health and Nutrition Examination Survey (NHANES) is a program of studies designed to assess the health and nutritional status of adults and children in the United States. The survey is unique in that it combines interviews and physical examinations. NHANES is a major program of the National Center for Health Statistics (NCHS). NCHS is part of the Centers for Disease Control and Prevention (CDC) and has the responsibility for producing vital and health statistics for the Nation.  
+
+The NHANES program began in the early 1960s and has been conducted as a series of surveys focusing on different population groups or health topics. In 1999, the survey became a continuous program that has a changing focus on a variety of health and nutrition measurements to meet emerging needs. The survey examines a nationally representative sample of about 5,000 persons each year. These persons are located in counties across the country, 15 of which are visited each year.
+
 The NHANES interview includes demographic, socioeconomic, dietary, and health-related questions. The examination component consists of medical, dental, and physiological measurements, as well as laboratory tests administered by highly trained medical personnel. Findings from this survey will be used to determine the prevalence of major diseases and risk factors for diseases.  
 
 ## Dataset
