Added all projects

--- a/_posts/2018-06-01-more.md
+++ b/_posts/2018-06-01-more.md
@@ -1,10 +1,9 @@
 ---
-title: "MORE Application"
+title: "M.O.R.E. Application"
 date: 2018-06-01
 tags: [python, javascript, SQL, D3.js]
 excerpt: "Python, Javascript, SQL, D3.js"
 ---
-## Details: 
 Code for this project is available on [GitHub](https://github.com/jjgong7/DVA-Project).
 
 Deployed project on AWS Elastic Beanstalk is available [here](http://more-project.us-east-1.elasticbeanstalk.com/).  
