--- a/_posts/2018-06-02-ul.md
+++ b/_posts/2018-06-02-ul.md
@@ -5,9 +5,11 @@ tags: [unsupervised learning, python, jython]
 excerpt: "Unsupervised Learning, Dimensionality Reduction, Clustering, PCA, ICA"
 header:
   image: "./images/ml-unsup/unsup_header.png"
----
+---  
+
+Details for this project are available on [GitHub](https://github.com/jjgong7/Machine-Learning/tree/master/3%20-%20Unsupervised%20Learning%20and%20Dimensionality%20Reduction).  
+
 ## Objective:  
-Details for this project are available on [GitHub](https://github.com/jjgong7/Machine-Learning/tree/master/3%20-%20Unsupervised%20Learning%20and%20Dimensionality%20Reduction).
 
 Six different algorithms are implemented; the first two are clustering – k-means clustering and Expectation Maximization and the last four are dimensionality reduction algorithms – PCA, ICA, Randomized Projections, and Random Forest. The experiments are split into four main parts. All algorithms are evaluated using Scikit-learn in Python.
 
@@ -103,7 +105,8 @@ Evaluation of clusters:
 
 **Faulty Steel Plates: Clustering**
 #### Evaluation: 
-<img src="../images/ml-unsup/FP_Clustering.png" alt="FP Clustering">  
+<!-- <img src="../images/ml-unsup/FP_Clustering.png" alt="FP Clustering">   -->
+[ ![](../images/ml-unsup/FP_Clustering.png) ](../images/ml-unsup/FP_Clustering.png)
 * K-means: SSE
     - Elbow at k=9
 * EM: Log-Likelihood
@@ -119,7 +122,8 @@ k=7 makes sense since there are seven different labels for the faulty steel plat
 
 **Breast Cancer: Clustering**
 #### Evaluation:
-<img src="../images/ml-unsup/BC_Clustering.png" alt="BC Clustering">  
+<!-- <img src="../images/ml-unsup/BC_Clustering.png" alt="BC Clustering">   -->
+[ ![](../images/ml-unsup/BC_Clustering.png) ](../images/ml-unsup/BC_Clustering.png)
 * K-means: SSE
     - Elbow at k=7
 * EM: Log-Likelihood
@@ -142,13 +146,15 @@ k=7 can make sense because there could possibly be seven different types of brea
 
 **Faulty Steel Plates: PCA**  
 
-<img src="../images/ml-unsup/FP_PCA.png" alt="FP PCA" width="350px">  
+<img src="../images/ml-unsup/FP_PCA.png" alt="FP PCA" width="450px">  
 * Most of the variance can be explained by the first 12 principal components
 * Original dataset has 27 features, now reduced to 12 principal components   
 
 **Faulty Steel Plates: PCA Clustering**  
 
-<img src="../images/ml-unsup/FP_PCA_Clustering.png" alt="FP PCA Clustering">  
+<!-- <img src="../images/ml-unsup/FP_PCA_Clustering.png" alt="FP PCA Clustering">  
+ -->
+ [ ![](../images/ml-unsup/FP_PCA_Clustering.png) ](../images/ml-unsup/FP_PCA_Clustering.png)
 
 Using 12 principal components for clustering:
 * K-means: SSE
@@ -166,13 +172,14 @@ Good cluster at k=7
 
 **Breast Cancer: PCA**  
 
-<img src="../images/ml-unsup/BC_PCA.png" alt="FP PCA" width="350px">  
+<img src="../images/ml-unsup/BC_PCA.png" alt="FP PCA" width="450px">  
 * Most of the variance is explained by the first 7 principal components
 * Original dataset has 30 features, now reduced to 7 principal components  
 
 **Breast Cancer: PCA Clustering**  
 
-<img src="../images/ml-unsup/BC_PCA_Clustering.png" alt="FP PCA Clustering">  
+<!-- <img src="../images/ml-unsup/BC_PCA_Clustering.png" alt="FP PCA Clustering">   -->
+[ ![](../images/ml-unsup/BC_PCA_Clustering.png) ](../images/ml-unsup/BC_PCA_Clustering.png)
 
 Using 7 principal components for clustering:
 * K-means: SSE
@@ -198,13 +205,14 @@ Evaluation:
 
 **Faulty Steel Plates: ICA**  
 
-<img src="../images/ml-unsup/FP_ICA.png" alt="FP ICA" width="350px">  
+<img src="../images/ml-unsup/FP_ICA.png" alt="FP ICA" width="450px">  
 * Kurtosis peaks at 4
 * Original dataset has 27 features and now 4 indpenedent components are selected. A huge reduction in dimensionality   
 
 **Faulty Steel Plates: ICA Clustering**  
 
-<img src="../images/ml-unsup/FP_ICA_Clustering.png" alt="FP ICA Clustering">  
+<!-- <img src="../images/ml-unsup/FP_ICA_Clustering.png" alt="FP ICA Clustering">  --> 
+[ ![](../images/ml-unsup/FP_ICA_Clustering.png) ](../images/ml-unsup/FP_ICA_Clustering.png)
 
 Using 4 independent components for clustering:
 * K-means: SSE
@@ -222,13 +230,14 @@ Good cluster at k=7
 
 **Breast Cancer: ICA**  
 
-<img src="../images/ml-unsup/BC_ICA.png" alt="FP ICA" width="350px">  
+<img src="../images/ml-unsup/BC_ICA.png" alt="FP ICA" width="450px">  
 * Kurtosis keeps increasing, meaning non-gaussianity increases as the number of independent components increases
 * Original dataset has 30 features, but 25 independent components is enough since it starts leveling off 
 
 **Breast Cancer: ICA Clustering**  
 
-<img src="../images/ml-unsup/BC_ICA_Clustering.png" alt="FP ICA Clustering">  
+<!-- <img src="../images/ml-unsup/BC_ICA_Clustering.png" alt="FP ICA Clustering"> -->  
+[ ![](../images/ml-unsup/BC_ICA_Clustering.png) ](../images/ml-unsup/BC_ICA_Clustering.png)
 
 Using 25 independent components for clustering:
 * K-means: SSE
@@ -255,14 +264,15 @@ Good cluster at k=6 and k=7
 
 **Faulty Steel Plates: RP**  
 
-<img src="../images/ml-unsup/FP_RP.png" alt="FP RP" width="350px">  
+<img src="../images/ml-unsup/FP_RP.png" alt="FP RP" width="450px">  
 * Average Pairwise Distance Correlation starts leveling off around 7 dimensions
 * The Average Reconstruction error keeps decreasing for higher dimensions
     - Tradeoff between overfitting and computational time
 
 **Faulty Steel Plates: RP Clustering**  
 
-<img src="../images/ml-unsup/FP_RP_Clustering.png" alt="FP RP Clustering">  
+<!-- <img src="../images/ml-unsup/FP_RP_Clustering.png" alt="FP RP Clustering"> -->  
+[ ![](../images/ml-unsup/FP_RP_Clustering.png) ](../images/ml-unsup/FP_RP_Clustering.png)
 
 Using 7 dimensions for clustering:
 * K-means: SSE
@@ -281,13 +291,14 @@ Good cluster at k=7
 
 **Breast Cancer: RP**  
 
-<img src="../images/ml-unsup/BC_RP.png" alt="FP RP" width="350px">  
+<img src="../images/ml-unsup/BC_RP.png" alt="FP RP" width="450px">  
 * Average Pairwise Distance Correlation starts levling off around 7 dimensions
 * Average reconstruction error keeps decreasing for higher dimensions
 
 **Breast Cancer: RP Clustering**  
 
-<img src="../images/ml-unsup/BC_RP_Clustering.png" alt="FP RP Clustering">  
+<!-- <img src="../images/ml-unsup/BC_RP_Clustering.png" alt="FP RP Clustering"> -->  
+[ ![](../images/ml-unsup/BC_RP_Clustering.png) ](../images/ml-unsup/BC_RP_Clustering.png)
 
 Using 7 dimensions for clustering:
 * K-means: SSE
@@ -314,13 +325,14 @@ Good cluster at k=5
 
 **Faulty Steel Plates: RF**  
 
-<img src="../images/ml-unsup/FP_RF.png" alt="FP RF" width="350px">  
+<img src="../images/ml-unsup/FP_RF.png" alt="FP RF" width="450px">  
 * Faulty Plates dataset has a lot of important features, and has a sharp decline at 25 features.
 * Decrease in dimensionality from 27 to 24
 
 **Faulty Steel Plates: RF Clustering**  
 
-<img src="../images/ml-unsup/FP_RF_Clustering.png" alt="FP RF Clustering">  
+<!-- <img src="../images/ml-unsup/FP_RF_Clustering.png" alt="FP RF Clustering"> -->  
+[ ![](../images/ml-unsup/FP_RF_Clustering.png) ](../images/ml-unsup/FP_RF_Clustering.png)
 
 Using 25 dimensions for clustering:
 * K-means: SSE
@@ -337,13 +349,14 @@ Good clusters at k=4 and k=9
 
 **Breast Cancer: RF**  
 
-<img src="../images/ml-unsup/BC_RF.png" alt="FP RF" width="350px">  
+<img src="../images/ml-unsup/BC_RF.png" alt="FP RF" width="450px">  
 * 10 important features, because Gini Importance starts to level off after that
 * Features reduced from 30 to 10 using Random Forest
 
 **Breast Cancer: RF Clustering**  
 
-<img src="../images/ml-unsup/BC_RF_Clustering.png" alt="FP RF Clustering">  
+<!-- <img src="../images/ml-unsup/BC_RF_Clustering.png" alt="FP RF Clustering"> -->  
+[ ![](../images/ml-unsup/BC_RF_Clustering.png) ](../images/ml-unsup/BC_RF_Clustering.png)
 
 Using 10 dimensions for clustering:
 * K-means: SSE
@@ -371,7 +384,7 @@ Good clusters at k=3, 6, and 10
 * Clusters are used as features for the neural network
 * Baseline is the same as above  
 
-<img src="../images/ml-unsup/CF_NN.png" alt="CF NN" width="350px">  
+<img src="../images/ml-unsup/CF_NN.png" alt="CF NN" width="450px">  
 * When clusters are used as features, it doesn't do a good job of predicting the labels
 * Performs far below benchmark accuracy of 71.9%
 * Seems like accuracy is best for EM and k-means when k=6
