--- a/_posts/2019-05-01-nhanes.md
+++ b/_posts/2019-05-01-nhanes.md
@@ -6,8 +6,10 @@ excerpt: "Supervised Learning, R (ggplot2, survey), Python, XGBoost, Random Fore
 header:
   image: "./images/practicum/nhanes_header.png"
 ---
+
+Details for this project are available on [GitHub](https://github.com/jjgong7/NHANES-Practicum).  
+
 ## Objective:  
-Details for this project are available on [GitHub](https://github.com/jjgong7/NHANES-Practicum).
 
 The objective of the practicum is to identify the prevalence and risk factors of hospital utilization and major diseases over time using publicly reported qualitative and quantitative data. To help answer this objective, I will explore five main questions:
 
@@ -148,7 +150,8 @@ F1 Score:
         + 0.55 relevant items are selected 
 
 The output of feature importance for Random Forest (Left) and XGBoost (Right):  
-<img src="../images/practicum/P1_HU_RFXG.png" alt="P1_HU_RFXG">  
+<!-- <img src="../images/practicum/P1_HU_RFXG.png" alt="P1_HU_RFXG"> -->
+[ ![](../images/practicum/P1_HU_RFXG.png) ](../images/practicum/P1_HU_RFXG.png)  
 
 **XGBoost:**  
 
@@ -182,13 +185,18 @@ This shows that some of the important risk factors for hospital utilization are:
 **Prevalence of Risk Factors:**  
 The prevalence of Hospital Utiliztaion and its risk factors are depicted visually using ggplot2 in R.  
 
-<img src="../images/practicum/P1_HU_V1.png" alt="P1_HU_V1">  
+<!-- <img src="../images/practicum/P1_HU_V1.png" alt="P1_HU_V1"> -->
+[ ![](../images/practicum/P1_HU_V1.png) ](../images/practicum/P1_HU_V1.png)  
+
 * Most people do have healthcare, are covered by health insurance, and are U.S. citizens so the proportions are higher, but the minority does seem relatively high for each.  
 
-<img src="../images/practicum/P1_HU_V2.png" alt="P1_HU_V2">  
+<!-- <img src="../images/practicum/P1_HU_V2.png" alt="P1_HU_V2"> -->
+[ ![](../images/practicum/P1_HU_V2.png) ](../images/practicum/P1_HU_V2.png)  
+
 * Females tend to go to the hospital more so than males.  
 
-<img src="../images/practicum/P1_HU_V3.png" alt="P1_HU_V3">  
+<!-- <img src="../images/practicum/P1_HU_V3.png" alt="P1_HU_V3"> -->
+[ ![](../images/practicum/P1_HU_V3.png) ](../images/practicum/P1_HU_V3.png)  
 * As we further break down the age grouping, it shows that children 0 - 12 go to the hospital a lot and this makes sense. Young children are likely to get sick from school or go to the hospital for vaccines.
 
 **Hospital Utilization over Time:**  
@@ -219,7 +227,8 @@ F1 Score:
     - Precision: 0.20
     - Recall: 0.59 
 
-<img src="../images/practicum/P2_HD_RFXG.png" alt="P2_HD_RFXG">  
+<!-- <img src="../images/practicum/P2_HD_RFXG.png" alt="P2_HD_RFXG"> -->
+[ ![](../images/practicum/P2_HD_RFXG.png) ](../images/practicum/P2_HD_RFXG.png)  
 
 **XGBoost:**  
 
@@ -256,18 +265,24 @@ Some of the features like HUQ010 (General health Condition) and HUQ050 (# Time R
 **Prevalence of Risk Factors:**  
 The prevalence of Heart Disease and its risk factors are depicted visually using ggplot2 in R.  
 
-<img src="../images/practicum/P2_HD_V1.png" alt="P2_HD_V1">  
+<!-- <img src="../images/practicum/P2_HD_V1.png" alt="P2_HD_V1"> -->
+[ ![](../images/practicum/P2_HD_V1.png) ](../images/practicum/P2_HD_V1.png)  
+
 * Most people who identified as having heart disease did have desirable total cholesterol and LDL cholesterol levels. However, high total cholesterol and LDL levels are still a good indicator of heart disease. 
 
-<img src="../images/practicum/P2_HD_V2.png" alt="P2_HD_V2">  
+<!-- <img src="../images/practicum/P2_HD_V2.png" alt="P2_HD_V2"> -->
+[ ![](../images/practicum/P2_HD_V2.png) ](../images/practicum/P2_HD_V2.png)  
+
 * There is more prevalence of heart disease in males than females. Those who do have high blood pressure also make up a large proportion of people who have heart disease.
 
-<img src="../images/practicum/P2_HD_V3.png" alt="P2_HD_V3">  
+<!-- <img src="../images/practicum/P2_HD_V3.png" alt="P2_HD_V3"> -->
+[ ![](../images/practicum/P2_HD_V3.png) ](../images/practicum/P2_HD_V3.png)  
 * Those most affected by heart disease are within the 64-85 age range group. As we break it down further, 66-75 year old’s within that group are most affected.
 
 **Heart Disease and Hospital Utilization over Time:**  
 
-<img src="../images/practicum/P2_HD_Time.png" alt="P2_HD_Time">  
+<!-- <img src="../images/practicum/P2_HD_Time.png" alt="P2_HD_Time"> -->
+[ ![](../images/practicum/P2_HD_Time.png) ](../images/practicum/P2_HD_Time.png)  
 
 * Heart disease doesn’t seem to be increasing over time. 
 * Hospital utilization linked with those who responded to the MEC questionnaire seem to indicate an increase.  
@@ -298,7 +313,8 @@ A cutoff of 0.55 instead of 0.50 for classification actually improved the f1-sco
 
 The output of feature importance for Random Forest (Left) and XGBoost (Right):  
 
-<img src="../images/practicum/P3_CA_RFXG.png" alt="P3_CA_RFXG">  
+<!-- <img src="../images/practicum/P3_CA_RFXG.png" alt="P3_CA_RFXG"> -->
+[ ![](../images/practicum/P3_CA_RFXG.png) ](../images/practicum/P3_CA_RFXG.png)  
 
 **XGBoost:**  
 
@@ -334,24 +350,31 @@ Some of the features like HUQ050 (# Time Received Healthcare) is a result of the
 **Prevalence of Risk Factors:**  
 The prevalence of Cancer and its risk factors are depicted visually using ggplot2 in R.
 
-<img src="../images/practicum/P3_CA_V1.png" alt="P3_CA_V1">  
+<!-- <img src="../images/practicum/P3_CA_V1.png" alt="P3_CA_V1"> -->
+[ ![](../images/practicum/P3_CA_V1.png) ](../images/practicum/P3_CA_V1.png)  
+
 * There is higher prevalence of cancer for non-Hispanic whites 
 * There is higher prevalence of cancer in households with two members. The higher prevalence of cancer for two household members may be due to the fact that average household size is about 2.6 people.
 
-<img src="../images/practicum/P3_CA_V2.png" alt="P3_CA_V2">  
+<!-- <img src="../images/practicum/P3_CA_V2.png" alt="P3_CA_V2"> -->
+[ ![](../images/practicum/P3_CA_V2.png) ](../images/practicum/P3_CA_V2.png)  
+
 * There is higher prevalence of cancer in women than in men.
 
-<img src="../images/practicum/P3_CA_V3.png" alt="P3_CA_V3">  
+<!-- <img src="../images/practicum/P3_CA_V3.png" alt="P3_CA_V3"> -->
+[ ![](../images/practicum/P3_CA_V3.png) ](../images/practicum/P3_CA_V3.png)  
+
 * Cancer affects mostly older individuals over the age of 64, more specifically, 66 to 75 years of age.
 
 **Cancer, Hospital Utilization & Proportion of No Healthcare Access over Time:**  
 
-<img src="../images/practicum/P3_CA_Time.png" alt="P3_CA_Time">  
+<!-- <img src="../images/practicum/P3_CA_Time.png" alt="P3_CA_Time"> -->
+[ ![](../images/practicum/P3_CA_Time.png) ](../images/practicum/P3_CA_Time.png)  
 
 * The plot of cancer over time shows that the prevalence is increasing. 
 * Among those who responded to the cancer questionnaire, there is an increase in hospital utilization, especially from 2009 to 2016, with the highest in 2016. 
 
-<img src="../images/practicum/P3_CA_Time2.png" alt="P3_CA_Time2">  
+<img src="../images/practicum/P3_CA_Time2.png" alt="P3_CA_Time2" width="450px">  
 
 * Socio-economic factors such as proportion of individuals with no healthcare access who have cancer has increased over the time period from 2011 to 2016 as well. 
 * Also, not shown here, but prevalence of low household income levels and low education levels have decreased over time.
@@ -378,7 +401,8 @@ Changing cutoffs for probabilities did not improve the f1-score.
 
 The output of feature importance for Random Forest (Left) and XGBoost (Right):  
 
-<img src="../images/practicum/P4_CL_RFXG.png" alt="P4_CL_RFXG">  
+<!-- <img src="../images/practicum/P4_CL_RFXG.png" alt="P4_CL_RFXG"> -->
+[ ![](../images/practicum/P4_CL_RFXG.png) ](../images/practicum/P4_CL_RFXG.png)  
 
 **XGBoost:**  
 
@@ -414,23 +438,28 @@ Some of the features like HUQ010 (General health Condition) and HUQ050 (# Time R
 **Prevalence of Risk Factors:**  
 The prevalence of Chronic Lung Disease and its risk factors are depicted visually using ggplot2 in R.
 
-<img src="../images/practicum/P4_CL_V1.png" alt="P4_CL_V1">  
+<!-- <img src="../images/practicum/P4_CL_V1.png" alt="P4_CL_V1"> -->
+[ ![](../images/practicum/P4_CL_V1.png) ](../images/practicum/P4_CL_V1.png)  
+
 * The prevalence of chronic lung disease for those with asthma is higher compared to those without. That could be a reason why it’s number one in feature importance.
 * Chronic lung disease primarily affects individuals between the ages of 49 to 63.
 
-<img src="../images/practicum/P4_CL_V2.png" alt="P4_CL_V2">  
+<!-- <img src="../images/practicum/P4_CL_V2.png" alt="P4_CL_V2"> -->
+[ ![](../images/practicum/P4_CL_V2.png) ](../images/practicum/P4_CL_V2.png)  
+
 * Females are more likely to be affected by chronic lung disease than males. 
 
-<img src="../images/practicum/P4_CL_V3.png" alt="P4_CL_V3">  
+<img src="../images/practicum/P4_CL_V3.png" alt="P4_CL_V3" width="450px">
+
 * The prevalence of chronic lung disease for those with smoking in the household is very high compared to those without.
 
 **Chronic Lung Disease Over Time:**  
 
-<img src="../images/practicum/P4_CL_Time.png" alt="P4_CL_Time">  
+<img src="../images/practicum/P4_CL_Time.png" alt="P4_CL_Time" width="450px">  
 
 * There doesn’t seem to be any upward or downward trend in chronic lung disease over time. 
 
-<img src="../images/practicum/P3_CA_Time2.png" alt="P3_CA_Time2">  
+<img src="../images/practicum/P3_CA_Time2.png" alt="P3_CA_Time2" width="450px">  
 
 * Socio-economic factors such as proportion of individuals with no healthcare access who have chronic lung disease has increased over the time period from 2011 to 2016 as well. 
 * Also, not shown here, but prevalence of low household income levels and low education levels have decreased over time.
@@ -456,7 +485,8 @@ Changing cutoffs for probabilities did not improve the f1-score.
 
 The output of feature importance for Random Forest (Left) and XGBoost (Right):  
 
-<img src="../images/practicum/P5_DI_RFXG.png" alt="P5_DI_RFXG">  
+<!-- <img src="../images/practicum/P5_DI_RFXG.png" alt="P5_DI_RFXG"> -->
+[ ![](../images/practicum/P5_DI_RFXG.png) ](../images/practicum/P5_DI_RFXG.png)  
 
 **XGBoost:**  
 
@@ -492,17 +522,22 @@ Some of the features like HUQ010 (General health Condition) and HUQ050 (# Time R
 **Prevalence of Risk Factors:**  
 The prevalence of Diabetes and its risk factors are depicted visually using ggplot2 in R.
 
-<img src="../images/practicum/P5_DI_V1.png" alt="P5_DI_V1">  
+<!-- <img src="../images/practicum/P5_DI_V1.png" alt="P5_DI_V1"> -->
+[ ![](../images/practicum/P5_DI_V1.png) ](../images/practicum/P5_DI_V1.png)  
+
 * Those who have high blood pressure also have a high prevalence of diabetes.
 * As Body Mass Index increases, the prevalence of Diabetes increases substantially. BMI is highly correlated to diabetes. 
 
-<img src="../images/practicum/P5_DI_V2.png" alt="P5_DI_V2">  
+<!-- <img src="../images/practicum/P5_DI_V2.png" alt="P5_DI_V2"> -->
+[ ![](../images/practicum/P5_DI_V2.png) ](../images/practicum/P5_DI_V2.png)  
+
 * Diabetes is prevalent among individuals ages 49 and over. 
 * Most individuals who have diabetes have desirable total cholesterol levels.
 
 **Diabetes, Hospital Utilization and Proportion of No Healthcare Access Over Time:**  
 
-<img src="../images/practicum/P5_DI_Time.png" alt="P5_DI_Time">  
+<!-- <img src="../images/practicum/P5_DI_Time.png" alt="P5_DI_Time"> -->
+[ ![](../images/practicum/P5_DI_Time.png) ](../images/practicum/P5_DI_Time.png)  
 
 * Diabetes has an increasing trend every single year from 2003 and onwards.  
 * Hospital utilization has increased for those who answered the diabetes questionnaire. 
@@ -520,7 +555,8 @@ From Part 5, since BMI levels are highly correlated to risk of diabetes, I will 
 Individuals who have BMI levels greater than 30 are considered to have diabetes. I created a new column in my data with a value of “Undiagnosed Diabetes” or “Not Undiagnosed”. An individual who is coded “Undiagnosed Diabetes” has a value of 0 for DIQ010, indicating no doctor told them they have diabetes, and they also have a value >30 for BMXBMI. The graph below shows the error box plots of the interaction and prevalence between “Undiagnosed Diabetes” and “Year” over time from 1999 to 2016. 
 
 
-<img src="../images/practicum/P6_UNDIAG.png" alt="P6_UNDIAG" width="450px">  
+<!-- <img src="../images/practicum/P6_UNDIAG.png" alt="P6_UNDIAG" width="450px"> -->
+[ ![](../images/practicum/P6_UNDIAG.png) ](../images/practicum/P6_UNDIAG.png)  
 
 The plot shows that the prevalence of undiagnosed diabetes has indeed increased over time.  
 
