updated about and pics

--- a/_posts/2020-05-05-sa.md
+++ b/_posts/2020-05-05-sa.md
@@ -4,7 +4,7 @@ date: 2020-05-05
 tags: [Twitter, Sentiment Analysis, Sentiment, Python, COVID-19, Coronavirus]
 excerpt: "Twitter, Sentiment Analysis, COVID-19, Python"
 header:
-  image: "./images/kurvv/covidtwitter.jpg"
+  image: "./images/kurvv/covidtwitter.png"
 ---  
 
 Check out this project I did for Kurvv where [I performed Sentiment Analysis on Tweets related to COVID-19 from January to mid-April](https://kurvv.ai/covid19-twitter/).
