--- a/_posts/2020-01-27-rc.md
+++ b/_posts/2020-01-27-rc.md
@@ -4,7 +4,7 @@ date: 2020-01-27
 tags: [E-commerce, Shopify, Collaborative Filtering, Python, Market Basket Analysis]
 excerpt: "E-commerce, Shopify, Collaborative Filtering, Python"
 header:
-  image: "./images/kurvv/recommendations.jpg"
+  image: "./images/kurvv/recommendations.png"
 ---  
 
 Check out this project I did for Kurvv where [I used collaborative filtering to make product recommendations for e-commerce businesses to sell their products](https://kurvv.ai/product-recommendations-for-e-commerce/).
